--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "node-sass": "^7.0.0"
   },
   "dependencies": {
-    "change-case": "^4.1.2",
-    "uuid": "^8.3.2"
+    "change-case": "^4.1.2"
   }
 }
