--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
     "html-minifier": "^4.0.0",
+    "hygen": "^6.1.0",
     "moment": "^2.27.0",
     "node-sass": "^7.0.0"
+  },
+  "dependencies": {
+    "change-case": "^4.1.2",
+    "uuid": "^8.3.2"
   }
 }
