--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "redirects": [
     {
-      "source": "/*",
+      "source": "/:slug*",
       "destination": "/404/index.html",
       "statusCode": 404
     },
