--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "redirects": [
     {
-      "source": "/:slug*",
-      "destination": "/404/index.html",
-      "statusCode": 404
+      "source": "/_error",
+      "destination": "/about",
+      "statusCode": 308
     },
     {
       "source": "waleed",
