--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,35 @@
-name: Deploy
-on: [push]
+name: deploy
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   deploy:
-    name: Deploy
+    name: deploy
     runs-on: ubuntu-latest
     permissions:
-      id-token: write # Needed for auth with Deno Deploy
-      contents: read # Needed to clone the repository
+      id-token: write
+      contents: read
 
     steps:
       - name: Clone repository
         uses: actions/checkout@v2
 
-      # TODO: add a build step here
+      - name: Install Deno
+        uses: denoland/setup-deno@main
+        with:
+          deno-version: 1.22.1
 
-      - name: Upload to Deno Deploy
+      - name: Build site
+        run: deno run -A https://deno.land/x/lume/ci.ts
+
+      - name: Deploy to Deno Deploy
         uses: denoland/deployctl@v1
         with:
-          project: "waleedhkhan-waleed-de"
-          entrypoint: "./main.ts" # TODO: update entrypoint
+          project: lume-example
+          entrypoint: server/main.ts
